[gd_scene load_steps=8 format=3 uid="uid://wvnpqkqssw0h"]

[ext_resource type="Script" path="res://scripts/picture_book_2.gd" id="1_xa31a"]
[ext_resource type="Texture2D" uid="uid://d366otpo8hqua" path="res://assets/picturebooks/book2/p1.jpg" id="2_u03jj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ky0p7"]
texture = ExtResource("2_u03jj")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2cnq"]
bg_color = Color(0.0604934, 0.313018, 0.47871, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ki42c"]
bg_color = Color(0.0588235, 0.313726, 0.478431, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_il1vc"]
bg_color = Color(0.639216, 0.172549, 0.0588235, 0.717647)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tafpl"]
bg_color = Color(0.0588235, 0.313726, 0.478431, 0.498039)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="picture_book2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xa31a")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 222.0
offset_right = -196.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ky0p7")

[node name="Prev" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -87.0
offset_right = 128.0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_g2cnq")
text = "◀⇠"

[node name="Next" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -86.0
offset_right = 7.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_ki42c")
text = "⇢▶️"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.5
offset_top = -32.0
offset_right = 56.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_il1vc")
text = "Exit"

[node name="Page" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.5
offset_right = 91.5
offset_bottom = 38.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_tafpl")
text = "Page 1/2"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
